--- a/external/2023.md
+++ b/external/2023.md
@@ -1,17 +1,18 @@
 **Solution to find:**
 
 > By any analysis, evil should always win. Good is not a practical survival strategy - it requires loyalty, self-sacrifice and love. And so, why does good prevail? What keeps the balance between good and evil in this appalling universe? Is there some kind of logic? Some mysterious force?
+
 **Todo:**
 
-- At night, name every star under the sky.
-- Vist more of milky way.
+- At night, try to name every star under the sky.
+- Conquer more mountains.
+- Bigger goals.
+- Follow the good vibes.
+- Just RUN!!!!!!!!
 
 **Note to self:**
 
-- Never be cruel, never be cowardly and never, ever eat pears!
-- Remember, hate is always foolish, and love is always wise.
+- Never be cruel, never be cowardly and never, ever eat pears!!
+- To remember, hate is always foolish, and love is always wise.
 - Always try to be nice, but never fail to be kind.
-- Laugh hard and be kind!!!!
-- Just RUN!!!!!!!!!
-
-
+- Laugh hard, run fast and be kind!!!!
